# vcf2hl7v2

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  setup.cfg
.github/ISSUE_TEMPLATE/: issue-template.md
.github/workflows/: main.yml
docs/: API.rst  Manual.md  QUICKSTART.rst  conf.py  index.rst
vcf2hl7v2/: __init__.py  common.py  converter.py  geneKB_Gene_table.csv  hl7v2_helper.py  hl7v2_message_generator.py
vcf2hl7v2/test/: NB6TK328_annotations.txt  RegionsStudied_example3.bed  RegionsToConvert_empty_example4.bed  RegionsToConvert_example3.bed  RegionsToConvert_example4.bed  Text_QCI.xml  XML_NQ-22-13_BC701503_295_20220314131838_GS700v3.QCIXml.xml  XML_To_HL7.txt  expected_NB6TK328.txt  expected_example1_wo_patient.txt  expected_example3.txt  expected_example4.txt  qiagen (1).vcf  qiagen.vcf  snpEff.vcf  test_integration.py  test_unit.py
