# Changes required for PyPI
[metadata]:
name = vcf2hl7v2
version = 0.0.1
description = Convert .vcf files to HL7V2 message
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache Software License
author = ""
author_email = info@elimu.io
url = https://github.com/elimuinformatics/vcf2hl7v2
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License

[options]
test_suite = vcf2hl7v2.test.test_vcf2hl7v2.suite
include_package_data = True
setup_requires =
    setuptools
packages = 
    vcf2hl7v2
    vcf2hl7v2.test
python_version = >=3.6
install_requires =
    Cython>=0.29.21
    hl7apy==1.3.4
    pysam
    pandas
    pytz>=2019.3
    pyVCF>=0.6.8
    pyranges>=0.0.96
tests_require =
    unittest
